# AnchorPoint

./: .gitignore  Cargo.toml  package-lock.json  run_output.txt
backend/: package.json
backend/prisma/: schema.prisma
backend/src/: index.ts
backend/src/api/controllers/: fee.controller.ts  info.controller.test.ts  info.controller.ts  sep6.controller.test.ts  sep6.controller.ts
backend/src/api/middleware/: auth.middleware.ts  rate-limit.middleware.ts
backend/src/api/routes/: fee.route.ts  sep24.route.ts  sep6.route.ts  transactions.route.ts
backend/src/config/: assets.ts  env.ts
backend/src/lib/: redis.ts
backend/src/services/: auth.service.ts  fee.service.test.ts  fee.service.ts  kyc.service.ts  stellar.service.ts  webhook.service.ts
backend/src/utils/: logger.ts
contracts/: Cargo.toml
contracts/nft_metadata/src/: lib.rs
contracts/swap/src/: lib.rs
contracts/xlm_wrapper/src/: lib.rs
contracts/yield/src/: lib.rs
src/amm/: lib.rs
src/auth/: rbac.rs
src/batch/: lib.rs
src/escrow_multisig/: lib.rs
src/escrow_timelock/: lib.rs
src/flash_loan/: lib.rs
src/governance/: lib.rs
src/indexing/: lib.rs
src/kyc/: lib.rs
src/oracle_consumer/: lib.rs
src/security_registry/: Cargo.toml
src/security_registry/src/: lib.rs
src/staking/: Cargo.toml  lib.rs
src/token/: lib.rs
src/upgradeable/: lib.rs
src/utils/: fees.rs
